@@ -1,5 +1,9 @@
 2022-03-12
 
+    * corinthian_isthmus_ii.js:fix forest distance to player base
+
+2022-03-12
+
     * release v0.25.12
 
 2022-03-11
